--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.1.1",
     "next-offline": "^4.0.6",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "wasm-loader": "^1.3.0"
   }
 }
