--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clr/ui": "^2.3.0",
+    "@zeit/next-css": "^1.0.1",
+    "file-loader": "^4.2.0",
     "next": "9.1.1",
+    "next-compose-plugins": "^2.2.0",
     "next-offline": "^4.0.6",
     "react": "16.10.2",
     "react-dom": "16.10.2",
+    "url-loader": "^2.2.0",
     "wasm-loader": "^1.3.0"
   }
 }
