--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --fix ."
   },
   "dependencies": {
     "@clr/ui": "^2.3.0",
     "@zeit/next-css": "^1.0.1",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.2.0",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
     "next": "9.1.1",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^4.0.6",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^2.0.0",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "url-loader": "^2.2.0",
