--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint-staged": "^9.4.2",
     "next": "9.1.1",
     "next-compose-plugins": "^2.2.0",
-    "next-offline": "^4.0.6",
+    "next-offline": "^5.0.0-beta.8",
     "prettier": "^1.18.2",
     "pretty-quick": "^2.0.0",
     "react": "16.10.2",
