--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@clr/ui": "^2.3.0",
+        "@commitlint/cli": "^8.2.0",
         "@zeit/next-css": "^1.0.1",
         "babel-eslint": "^10.0.3",
         "eslint": "^6.6.0",
@@ -30,5 +31,10 @@
         "react-dom": "16.10.2",
         "url-loader": "^2.2.0",
         "wasm-loader": "^1.3.0"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
     }
 }
